# trask

./: .gitignore  .prettierignore  .prettierrc  README.md  main.py  pyproject.toml  task.py  tasky.py
trask/: .flake8  main.py  task.py
