[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trask"
version = "0.1.0"
description = "Gestor de tareas en terminal"
authors = [{name = "Iago"}]
dependencies = [
    "click",
    "tabulate",
]

[tool.setuptools]
py-modules = ["main", "task"]

[project.scripts]
trask = "main:main"
